--- a/System/presentacion.html
+++ b/System/presentacion.html
@@ -16,14 +16,13 @@
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="icon.png">
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/presentacion.css">
+    <link rel="stylesheet" href="src/css/normalize.css">
+    <link rel="stylesheet" href="src/css/presentacion.css">
 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/LATEST-VERSION">
     <link rel="manifest" href="site.webmanifest">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald|PT+Sans" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/c631d0424b.js" data-auto-replace-svg="nest"
-        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/c631d0424b.js" data-auto-replace-svg="nest" crossorigin="anonymous"></script>
     <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -67,7 +66,7 @@
 
     <main id="inicio">
         <div class="imagen-inicio">
-            <img src="./img/foto gym1.jpg" alt="">
+            <img src="src/img/foto gym1.jpg" alt="">
         </div>
         <div class="mensaje-inicial">
             <h1>Mantente en tu Prime. Alcanza tu PEAK</h1>
@@ -196,11 +195,11 @@
 
 
 
-    <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/jquery.js"></script>
-    <script src="js/jquery.lettering.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="src/js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
+    <script src="src/js/app.js"></script>
+    <script src="src/js/jquery.js"></script>
+    <script src="src/js/jquery.lettering.js"></script>
+    <script src="src/js/scripts.js"></script>
 
 
 </body>
