--- a/System/presentacion.html
+++ b/System/presentacion.html
@@ -12,10 +12,6 @@
     <meta property="og:url" content="">
     <meta property="og:image" content="">
 
-    <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="icon.png">
-
     <link rel="stylesheet" href="src/css/normalize.css">
     <link rel="stylesheet" href="src/css/presentacion.css">
 
@@ -28,11 +24,10 @@
 
 <body>
 
-    <!-- Add your site or application content here -->
     <header>
 
         <div class="logo">
-            <img src="img/rookiex.png" alt="asd">
+            <img src="src/img/rookiex.png" alt="asd">
         </div>
         <nav class="navegacion clearfix">
             <ul>
@@ -73,81 +68,6 @@
         </div>
         
     </main>
-
-    <!-- <section id="quienesSomos" class="contenedor quienes-somos clearfix">
-        <div class="contenido">
-            <div class="contenedor-contenido">
-                <h2 class="titulos">¿Quienes somos?</h2>
-                <div class="parrafo">
-                    <p>Somos un grupo de estudiantes apasionados por la programación con un proyecto en mente, un
-                        COMPILADOR.
-                        Surgió como un proyecto de curso, pero se convirtió en un proyecto personal, donde tanto
-                        individual
-                        como colectivamente llevamos a otro nivel nuestras capacidades.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="caracteristicas" class="contenedor clearfix simple-pero-eficaz">
-        <div class="contenido">
-            <h2 class="titulos centro">Simple pero eficaz</h2>
-            <div class="contenedor-contenido caracteristicas">
-                <div class="parrafo">
-                    <p><b>Rookiex Compilator</b> posee una interfaz sencilla pero agradable a la vista,
-                        y es facil de entender de modo que te concentres sólo en tus habilidades de programación.</p>
-                </div>
-            </div>
-            <div class="unete-a-nosotros">
-                <button><a href="./login.html">Únete a nosotros</a></button>
-            </div>
-        </div>
-    </section>
-
-    <section id="creadores" class="creadores">
-        <div class="contenido">
-
-            <ul class="fundadores-org clearfix">
-                <h2 class="titulos conocer-fundadores" id="conocer-fundadores">Conoce a nuestros creadores</h2>
-                <li>
-                    <div class="fundadores">
-                        <img src="img/elon musk.jpg" alt="imagen no disponible">
-                        <p>Dilan Peña</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="fundadores">
-                        <img src="img/elon musk.jpg" alt="imagen no disponible">
-                        <p>José López</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="fundadores">
-                        <img src="img/elon musk.jpg" alt="imagen no disponible">
-                        <p>Saraí Herrera</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="fundadores">
-                        <img src="img/elon musk.jpg" alt="imagen no disponible">
-                        <p>Luis Candiales</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="fundadores">
-                        <img src="img/elon musk.jpg" alt="imagen no disponible">
-                        <p>Tabata Vegas</p>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </section>
-
-    <footer class="site-footer">
-        <p class="copyright">Todos los derechos reservados Rookiex Company 2023</p>
-    </footer> -->
-
 
     <script>
         function toggleNav() {
@@ -196,18 +116,8 @@
 
 
     <script src="src/js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
-    <script src="src/js/app.js"></script>
+    <script src="src/js/index.js"></script>
     <script src="src/js/jquery.js"></script>
     <script src="src/js/jquery.lettering.js"></script>
-    <script src="src/js/scripts.js"></script>
-
-
 </body>
-
-<!-- <footer class="footer">
-  <div class="footerContainer">
-      <p class="copyright">© GROUP TITLE 2015</p>
-  </div>
-</footer> -->
-
 </html>
