--- a/System/login.html
+++ b/System/login.html
@@ -73,8 +73,7 @@
 
 
     <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/scripts.js"></script> 
+    <script src="js/index.js"></script>
 
 </body>
 
