esto es un cambio

--- a/System/presentacion.html
+++ b/System/presentacion.html
@@ -35,7 +35,7 @@
                 <li><a href="./registrar-usuario.php"><span>Nosotros</span></a></li>
                 <li><a href="#quienesSomos"></a><span>Iniciar Sesión</span></li>
                 <li><a href="#caracteristicas"></a><span>Buscar</span></li>
-                <li><a href="#caracteristicas"></a><span>Carrito</span></li>
+                <li><a href="#caracteristicas"></a><span>Carritooooo</span></li>
             </ul>
         </nav>
         <div class="navegacionMobile">
