--- a/System/presentacion.html
+++ b/System/presentacion.html
@@ -35,7 +35,7 @@
                 <li><a href="./registrar-usuario.php"><span>Nosotros</span></a></li>
                 <li><a href="#quienesSomos"></a><span>Iniciar Sesión</span></li>
                 <li><a href="#caracteristicas"></a><span>Buscar</span></li>
-                <li><a href="#caracteristicas"></a><span>Carritooooo</span></li>
+                <li><a href="#caracteristicas"></a><span>Carrito</span></li>
             </ul>
         </nav>
         <div class="navegacionMobile">
@@ -45,7 +45,7 @@
         </div>
 
     </header>
-    
+
     <main id="inicio">
         <div class="imagen-inicio">
             <img src="src/img/foto gym1.jpg" alt="">
