--- a/System/presentacion.html
+++ b/System/presentacion.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="">
 
     <link rel="stylesheet" href="src/css/normalize.css">
-    <link rel="stylesheet" href="src/css/presentacion.css">
+    <link rel="stylesheet" href="src/css/styles.css">
 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/LATEST-VERSION">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald|PT+Sans" rel="stylesheet">
@@ -26,7 +26,7 @@
     <header>
 
         <div class="logo">
-            <img src="src/img/rookiex.png" alt="asd">
+            <img src="src/img/rookiex-logo.png" alt="asd">
         </div>
         <nav class="navegacion clearfix">
             <ul>
@@ -47,7 +47,7 @@
 
     <main id="inicio">
         <div class="imagen-inicio">
-            <img src="src/img/foto gym1.jpg" alt="">
+            <img src="src/img/rook.jpg" alt="">
         </div>
         <div class="mensaje-inicial">
             <h1>Mantente en tu Prime. Alcanza tu PEAK</h1>
@@ -99,9 +99,6 @@
 
     </script>
 
-
-
-    <script src="src/js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
     <script src="src/js/index.js"></script>
     <script src="src/js/jquery.js"></script>
     <script src="src/js/jquery.lettering.js"></script>
